Fixed layout issue on mobile devices.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -34,7 +34,13 @@
 /* Brand for pages: */
 .intext-brand {
     font-family: "Tenor Sans","Helvetica Neue",Helvetica,Arial,cursive;
+}
+
+@media(min-width:768px) {
+.intext-brand {
+    font-family: "Tenor Sans","Helvetica Neue",Helvetica,Arial,cursive;
     letter-spacing: 1ex;
+}
 }
 
 /* Logos: */
